# aoc2024

./: .brei_history  .copier-answers.yml  .gitignore  Manifest.toml  Project.toml  README.md  brei.toml  cabal.project  entangled.toml  hie.yaml  pyproject.toml  serve.sh
.github/workflows/: main.yml
docs/: contents.md  day01.md  day02.md  day03.md  day04.md  day05.md  day06.md  day07.md  day08.md  day09.md  day10.md  day11.md  day12.md  day13.md  day14.md  day15.md  day16.md  day17.md  day18.md  day19.md  day20.md  day21.md  day22.md  day23.md  day24.md  day25.md  gen_days.py  gencontents.py  index.md  parsing.md  tests.md  weave.toml  weave_html.json
docs/template/: dark.css
haskell/: aoc2024.cabal
haskell/app/: Day11.hs
notebooks/: day12.jl  day14.jl  yr2015day19.jl
python/: day01.py  day03.py
src/: AOC2024.jl  Day01.jl  Day02.jl  Day03.jl  Day04.jl  Day05.jl  Day06.jl  Day07.jl  Day08.jl  Day09.jl  Day10.jl  Day11.jl  Day12.jl  Day13.jl  Day14.jl  Day15.jl  Day16.jl  Day17.jl  Day18.jl  Day19.jl  Day20.jl  Day21.jl  Day22.jl  Day23.jl  Day24.jl  Day25.jl  Monads.jl  Parsing.jl  Scratch.jl  Year2015Day19.jl
test/: Day01Spec.jl  Day02Spec.jl  Day03Spec.jl  Day04Spec.jl  Day05Spec.jl  Day06Spec.jl  Day07Spec.jl  Day08Spec.jl  Day09Spec.jl  Day10Spec.jl  Day11Spec.jl  Day12Spec.jl  Day13Spec.jl  Day14Spec.jl  Day15Spec.jl  Day16Spec.jl  Day17Spec.jl  Day18Spec.jl  Day19Spec.jl  Day20Spec.jl  Day21Spec.jl  Day22Spec.jl  Day23Spec.jl  Day24Spec.jl  Day25Spec.jl  Manifest.toml  ParsingSpec.jl  runtests.jl
